fix double scroll

--- a/src/components/common/collapse/collapse.scss
+++ b/src/components/common/collapse/collapse.scss
@@ -53,7 +53,7 @@
 }
 
 .toggle.isOpen + .lbl-toggle + .collapsible-content {
-  max-height: 100vh;
+  max-height: 200vh;
 }
 
 .toggle.isOpen + .lbl-toggle {
